# qawaii

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  plan.md  qawaii.pro  qawaii.qrc
resources/: resources.qrc
resources/translations/: qawaii_en.ts  qawaii_ru.ts
src/: main.cpp  qawaii.cpp  qawaii.h
src/core/models/: Folder.cpp  Folder.h  Note.cpp  Note.h
src/core/services/: MigrationService.cpp  MigrationService.h  NotesManager.cpp  NotesManager.h  SyncService.cpp  SyncService.h
src/core/storage/: MySQLDriver.cpp  MySQLDriver.h  SQLiteDriver.cpp  SQLiteDriver.h  StorageDriver.cpp  StorageDriver.h
src/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
src/ui/dialogs/: DriverSettingsWidget.cpp  DriverSettingsWidget.h  IconSelectionDialog.cpp  IconSelectionDialog.h  IconSelectionDialog.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui
src/ui/widgets/: MarkdownViewer.cpp  MarkdownViewer.h  NoteEditorWidget.cpp  NoteEditorWidget.h  NotesTreeWidget.cpp  NotesTreeWidget.h
src/utils/: MarkdownParser.cpp  MarkdownParser.h
tests/: TestSQLiteDriver.cpp  TestSQLiteDriver.h
